Added HeeHaw Javascript

--- a/js3/index.html
+++ b/js3/index.html
@@ -9,7 +9,8 @@
 
     <label for="hee-haw-qty">Please type a whole number: </label>
     <input id="hee-haw-qty" type="text">
-    <button id="print">Print</button>
+    <span>Must type a whole number</span>
+    <button id="btn-print">Print</button>
 
     <p>Hee Haw Output</p>
     <div id="output">
