--- a/js4/array-object.html
+++ b/js4/array-object.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="array-object.css">
-    <title>Array Object</title>
+    <title>Array To Object Method</title>
 </head>
 <body>
+<h1>Array To Object Method</h1>
+<table>
+    <thead>
+        <tr>
+            <th>Input</th>
+            <th>Output</th>
+        </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table>
 
 <script src="array-object.js"></script>
 </body>
